# rust-to-python-noise-gate-example

./: .gitignore  LICENSE  README.md
python/: main.py  noise_gate.py  requirements.txt
rust/: Cargo.toml  noise_gate_rs.pyi  pyproject.toml
rust/src/: lib.rs
