[package]
name = "noise-gate-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "noise_gate_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"

[package.metadata.docs.rs]
targets = ["src/lib.rs"]
